# ugubot

./: .dockerignore  .gitignore  Dockerfile  ai.py  app.py  bot.py  config.py  db.py  main.py  models.py  pyproject.toml  redis_cache.py  settings.toml  settings.toml.example  webui.py  ws_handler.py  xmpp.py
ai/: ai_bot.py  types.py
ai/middleware/: __init__.py  alternate_model_switcher.py  base.py  command_parser.py  context_and_prelude.py  drop_incoming.py  help_command.py  strip_message.py  temperature_command.py  usage_command.py  user_defined_prompt.py
ugubot-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
ugubot-frontend/src/: App.vue  main.js  util.js
ugubot-frontend/src/assets/: main.css
ugubot-frontend/src/components/: TheChatBox.vue  TheChatListSidebar.vue  TheDatePicker.vue  TheHeader.vue  TheInputPrompt.vue
util/: plurals.py  signer.py  token_counter.py  xmpp.py
webui/: index.html  login.html
webui/html/: chat.css  chat.html  chat.js  ws_test.html
webui/secured/: index-9c9c9051.css  index-ab5f1499.js  index.css  index.js
